# ipo_ml_screener_repo

ipo_ml_screener/: .env.example  Makefile  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  run_batches.sh  run_full_download.sh
ipo_ml_screener/data/processed/: scores.parquet  scores.parquet.backup
ipo_ml_screener/src/ipo_ml_screener/: cli.py  config.py  io_utils.py  ipo.py  market.py  momentum.py  scoring.py  sec.py
ipo_ml_screener/src/ipo_ml_screener.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
